# betterPosting

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  test.py
backend/app/: main.py
backend/app/api/endpoints/: posts_api.py  stripe_api.py
backend/app/core/: config.py
backend/app/schemas/: posts.py
backend/app/services/: openai_service.py  sendgrid_service.py  tweets_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.js  Cancel.js  Home.js  Success.js
